cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__gemini__template_20250119_194838.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: EMR Cluster for Spark or S3 backed HBase with additional security groups.
Resources:
  EMRCluster:
    Type: AWS::EMR::Cluster
    Properties:
      Name: MyEMRCluster
      ReleaseLabel: emr-6.10.0
      Instances:
        InstanceGroups:
          - Name: MasterInstanceGroup
            InstanceRole: MASTER
            InstanceType: m5.xlarge
            InstanceCount: 1
          - Name: CoreInstanceGroup
            InstanceRole: CORE
            InstanceType: m5.xlarge
            InstanceCount: 2
          - Name: TaskInstanceGroup
            InstanceRole: TASK
            InstanceType: m5.xlarge
            InstanceCount: 2
      VisibleToAllUsers: true
      Applications:
        - Name: Spark
        - Name: Hive
        - Name: Hadoop
      Configurations:
        - Classification: spark-hive-site
          Properties:
            hive.exec.scratchdir: s3://<your-s3-bucket>/scratch
        - Classification: hadoop-env
          Properties:
            hadoop.security.authentication: simple
      BootstrapActions:
        - Name: InstallAdditionalSoftware
          ScriptBootstrapAction:
            Path: s3://<your-s3-bucket>/bootstrap.sh
      SecurityConfiguration: !Ref SecurityConfiguration
      Tags:
        - Key: Name
          Value: MyEMRCluster
  SecurityConfiguration:
    Type: AWS::EMR::SecurityConfiguration
    Properties:
      Name: MyEMRSecurityConfiguration
      SecurityGroupIds:
        - !Ref SecurityGroup
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EMR cluster
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8088
          ToPort: 8088
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8020
          ToPort: 8020
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      VpcId: <your-vpc-id>

Outputs:
  ClusterId:
    Value: !Ref EMRCluster
    Description: EMR Cluster ID
